# krunner-veracryptrunner

./: .gitignore  CMakeLists.txt  README.md  install.sh
src/: CMakeLists.txt  main.cpp
src/cli/: CLIMain.cpp  CLIMain.h
src/config/: CMakeLists.txt  VeracryptConfigItem.cpp  VeracryptConfigItem.h  plasma-runner-veracryptrunner2_config.desktop  veracryptrunner_config.cpp  veracryptrunner_config.h  veracryptrunner_config.ui  veracryptrunner_config_item.ui
src/core/: VeracryptVolume.h  VeracryptVolumeManager.h  VolumeCommandBuilder.h
src/runner/: VeracryptRunner.cpp  VeracryptRunner.h  dbus_utils.h  editdialog.cpp  editdialog.h  org.kde.krunner1.xml  veracryptrunner2.desktop
src/ui/: VeracryptConfigItem.cpp  VeracryptConfigItem.h  editdialog.cpp  editdialog.h
